@@ -2445,6 +2445,8 @@ changes in sbcl-0.8.11 relative to sbcl-0.8.10:
     :LOAD-TOPLEVEL context; this appears to decrease fasl sizes by
     approximately 10%.
   * fixed some bugs revealed by Paul Dietz' test suite:
+    ** MAKE-INSTANCES-OBSOLETE returns the class name when called with 
+       a symbol.
     ** Fixed an optimization bug related to inheritance of initforms
        from local to shared slots.
     ** FILE-POSITION works as specified on BROADCAST-STREAMs.
